# POBR-labs

./: .gitignore  README.md
framework/: Cargo.toml  README.md
framework/src/: main.rs
lab1/: README.md  main.cpp  notes.txt
lab2/: BaseFilter.cpp  BaseFilter.h  CMakeLists.txt  ConvFilter.cpp  README.md  RankFilter.cpp  RankFilter.h  main.cpp
lab2/include/: BaseFilter.h  ConvFilter.h
lab2/src/: BaseFilter.cpp  ConvFilter.cpp  RankFilter.cpp  main.cpp
lab3/: CMakeLists.txt  README.md  task1  task2
lab3/black-white/: elipsa.dib  elipsa1.dib  kolo.dib  prost.dib  troj.dib
lab3/src/: main.cpp
